== Changelog ==
= 1.7.3.2 =
Quotes Form Settings Field
1 change form background color
2 Change text Color
3 Edit Form Title
4 Change title font size
5 Title Font weight
6 Edit Form Subtitle
7 Change input field width
8 change button color
9 change button width
10.Change table heading and added Custom fields on Quotes Form Entries

= 1.7.3.1 =
1.update the look of tables on More info settings field
2.Make the buttons on WCP settings the same blue as the navigation bar
3.make 2 columns on more info section  fields tab
4.Add WCP Tools submenu to copy the shortcode for Quote Request.
5.Add checkbox to enable Quote Request shortcode.
6.added file "request-quotes-form-settings.php" under wcp-tools-submenu


= 1.7.3.0 =
improve Admin UI
1.added topnav bar on WCP Settings
2. Update Navigation bar design

= 1.7.2.9 =
1. Added logo position settings on Result table propeties

= 1.7.2.8 =
= Minor Bug fixes =
1.Update Jquery  deprecated functions
2.fix filter table not showing on wordpress 5.7.1
3.fix More Info fields redirecting to 404 page
4.fix Table results not fitted on the screen when resize
5.fix swithching table ( when tabular selected horizontal settings should hide)
////////////////////////////////////////////////////////////////////////////////
= 1.7.2.6 =
1. Update deprecated functions
2. Update jQuery framework js files.

= 1.7.2.5 =
1. Improve category column structure.

= 1.7.2.4 =
1. Add Options Display settings to Categories 1-5 settings.

= 1.7.2.3 =
1. Update plugin update checker.
2. Update authentication token and branch.

= 1.7.2.2 =
1. Re-structure plugin files.
2. Fix hiding notices to WCP Editor Role.
3. Add index.php to plugin folders.
4. Improve fixing of data results table layout.

= 1.7.2.1 =
1. Improve data results table layout.
2. Fix data results table cell width on mobile.

= 1.7.2.0 =
1. Add More Info button outbound clicks tracking functionality.
2. Fix timestamp value on Outbound Clicks table and meta box. 