@@ -100,7 +100,6 @@
 }
 
 #quotes-form-container input,.text-area-form {
-	width: 80%;
 	display: inline-block;
 	text-align: left;
 	border-radius: 7px;
